--- a/GramApp/templates/all-gram/base.html
+++ b/GramApp/templates/all-gram/base.html
@@ -5,9 +5,9 @@
   <meta charset="utf-8">
 
   {% if title %}
-  <title>Moringa Tribune - {{title}}</title>
+  <title> INSTAGRAM - {{title}}</title>
   {% else %}
-    <title> Moringa Tribune </title>
+    <title> INSTAGRAM </title>
   {% endif %}
 
   {% block styles %}
@@ -16,7 +16,7 @@
 
 </head>
 <body>
-    {% block content %} <h1 class='text-center'>News for {{date|date:"l d-F Y"}}</h1> {%endblock%}
+    {% block content %} <h1 class='text-center'>  {{date|date:"l d-F Y"}}</h1> {%endblock%}
 
     {% block scripts %}
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
