--- a/GramApp/templates/all-gram/base.html
+++ b/GramApp/templates/all-gram/base.html
@@ -1,4 +1,5 @@
 {% load bootstrap3 %}
+{% load static %}
 <!DOCTYPE html>
 <html>
 <head>
@@ -13,7 +14,7 @@
   {% block styles %}
     {% bootstrap_css %}
   {% endblock %}
-
+<link rel="stylesheet" href="{% static 'css/basegram.css' %}">
 </head>
 <body>
     {% block content %} <h1 class='text-center'>  {{date|date:"l d-F Y"}}</h1> {%endblock%}
