Include the navbar and the search bar

--- a/GramApp/templates/all-gram/base.html
+++ b/GramApp/templates/all-gram/base.html
@@ -17,6 +17,7 @@
 <link rel="stylesheet" href="{% static 'css/basegram.css' %}">
 </head>
 <body>
+    {% include "navbar.html"%}
     {% block content %} <h1 class='text-center'>  {{date|date:"l d-F Y"}}</h1> {%endblock%}
 
     {% block scripts %}
