--- a/GramApp/templates/all-gram/register.html
+++ b/GramApp/templates/all-gram/register.html
@@ -1,1 +1,9 @@
-<h2> REGISTER </h2>
+<h2> SIGN UP </h2>
+
+<form method="POST" action="">
+    {% csrf_token %}
+    {{form.as_p}}
+
+    <input type="submit" name="Create User">
+
+</form>     
