--- a/GramApp/templates/all-gram/ past-gram.html
+++ b/GramApp/templates/all-gram/ past-gram.html
@@ -6,17 +6,17 @@
 <div class="container">
 
   <!-- Looping through news   -->
-  {% for gramm_item in gramm %}
+  {% for GramApp_item in GramApp %}
 
   <div class="row">
     <!-- displaying News articles -->
     <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
-      <h2 class="text-center"> {{ gramm_item.name }} </h2>
+      <h2 class="text-center"> {{ GramApp_item.name }} </h2>
     </div>
     <!--Display news Article images  -->
     <div class="row">
     <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
-        <img src="{{gramm_item.Images_image.url}}" class="img-responsive w-100 btn btn-outline-info" alt="image">
+        <img src="{{GramApp_item.Images_image.url}}" class="img-responsive w-100 btn btn-outline-info" alt="image">
       </div>
     </div>
   </div>
