--- a/GramApp/templates/all-gram/new_profile.html
+++ b/GramApp/templates/all-gram/new_profile.html
@@ -1,4 +1,5 @@
-{% load bootstrap3 %} {% load staticfiles %}
+{% load bootstrap3 %} 
+{% load staticfiles %}
 <!DOCTYPE html>
 <html>
 
@@ -25,7 +26,8 @@
 
    {% block scripts %}
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  {% bootstrap_javascript %} {% endblock %}
+  {% bootstrap_javascript %}
+  {% endblock %}
 
 </body>
 
