--- a/GramApp/templates/django_registration/logout.html
+++ b/GramApp/templates/django_registration/logout.html
@@ -1,4 +1,4 @@
-{% extends "all-ig/base.html" %}
+{% extends "all-gram/base.html" %}
 {% block content %}
 <div class="container">
     <h3 class="white-important">You've been logged out</h3>
