--- a/GramApp/templates/navbar.html
+++ b/GramApp/templates/navbar.html
@@ -61,6 +61,9 @@
       <li>
         <a class='btn btn-default' href="/accounts/login">Login</a>
       </li>
+      <li>
+      <a class='btn btn-default'  href="{%url 'register'%}">Register</a>
+      </li>
 
       {% endif %}
     </div>
